--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,5 +10,6 @@ edition = "2018"
 serde = "1"
 serde_json = "1"
 reqwest = "0"
-actix-web = "4.0.0-beta.5"
-tokio = { version = "1.4.0", features = ["time"] }
+actix-web = "4.0.0-beta.10"
+actix-cors = "0.6.0-beta.3"
+tokio = "1.12.0"
