--- a/app.json
+++ b/app.json
@@ -11,11 +11,15 @@
 	"env": {
 		"BUILDPACK_URL": "https://github.com/emk/heroku-buildpack-rust.git",
 		"API_TOKEN": {
-			"description": "The token required to access the Beyond Identity API",
+			"description": "The API token required to access the Beyond Identity API for your demo tenant",
 			"value": ""
 		},
 		"FIREBASE_API_KEY": {
 			"description": "The Firebase API key of the Firebase account you wish to use for legacy password auth",
+			"value": ""
+		},
+		"PUBLIC_CLIENT_ID": {
+			"description": "The client ID for Solemate iOS - must be a public client configured in your own demo tenant",
 			"value": ""
 		}
 	}
